--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Simion al baregon</title>
+</head>
+<body>
+
+<h1>Simion pinpom</h1>
+<p>Hay pero simion pinpom</p>
+
+</body>
+</html>
+
 
